= 2.28.0 (2017-07-14)

* Deprecate unneeded internal constants (jeremyevans)

* Optimize for ruby 2.3+ using frozen string literals instead of constants (jeremyevans)

* Move 303 default redirect status from sinatra_helpers to status_303 plugin, so it can be loaded separately (plujon) (#122)

= 2.27.0 (2017-06-14)

* Add class_matchers plugin for matching other classes (in addition to String/Integer), with user specified regexps and type conversion (jeremyevans)

* Support String class matcher for non-empty segments, same behavior as symbol matchers but more intuitive and DRY (jeremyevans)

* Support Integer class matcher for \d+ segments, yielding matched values as integers (jeremyevans)

= 2.26.0 (2017-05-16)

* Support :skip_middleware option to csrf plugin to add only the methods and not add the middleware (luciusgone) (#118)

* Handle multiple types with matching suffixes in the type_routing plugin (e.g. tar.gz and gz) (tomdalling) (#117)

= 2.25.0 (2017-04-18)

* Add error_mail plugin, similar to error_email but using mail instead of net/smtp directly (jeremyevans)

= 2.24.0 (2017-03-15)

* Have h plugin use cgi/escape if available for faster escaping (jeremyevans)

* Add disallow_file_uploads plugin for raising an exception if a multipart file upload is attempted (jeremyevans)

* Add strip_path_prefix plugin for stripping prefixes off of internal absolute paths, making them relative paths (jeremyevans)

* Add Roda.expand_path method to DRY up path expansion (jeremyevans)

* Support :freeze_middleware option, which freezes all middleware instances when building the rack app (jeremyevans)

* Allow middleware plugin to accept a block that will be used to configure the application when used as middleware (jeremyevans)

* Support an options hash when loading the cookies plugin, that will be used as the defaults for setting and deleting cookies (mwpastore, jeremyevans) (#112)
