@@ -97,6 +97,7 @@
     <li><a href="rdoc/classes/Roda/RodaPlugins/ParamMatchers.html">param_matchers</a>: Adds matchers using information from the request params.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/ParamsCapturing.html">params_capturing</a>: Stores matcher captures in the request params.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/PathMatchers.html">path_matchers</a>: Adds matchers using information from the request path.</li>
+    <li><a href="rdoc/classes/Roda/RodaPlugins/PlaceholderStringMatchers.html">placeholder_string_matchers</a>: Supports placeholders in string for backwards compatibility.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/OptimizedStringMatchers.html">optimized_string_matchers</a>: Adds performance optimized matchers for single string arguments.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/SlashPathEmpty.html">slash_path_empty</a>: Considers a path of &quot;/&quot; as an empty path when doing a terminal match.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/SymbolMatchers.html">symbol_matchers</a>: Adds support for symbol-specific matching regexps.</li>
